Fix links on subjects page font size too large, TOC too small

--- a/static/css/components/link-box.less
+++ b/static/css/components/link-box.less
@@ -7,24 +7,16 @@
 }
 
 .link-box {
+  font-size: @font-size-body-medium;
+  white-space: normal;
+  word-wrap: break-word;
+
   h6 {
     color: @grey;
     margin: 0;
     padding: 0;
     text-transform: uppercase;
     display: inline;
-  }
-  > div {
-    font-size: @font-size-headline-small;
-  }
-}
-
-// div.subjects can be removed in future when legacy.css has been removed
-.link-box,
-div.subjects {
-  > div {
-    white-space: normal;
-    word-break: normal;
-    word-wrap: break-word;
+    font-size: @font-size-label-medium;
   }
 }
